--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -36,3 +36,9 @@
     width: 40px;
     height: 40px;
 }
+
+@media only screen and (max-width: 600px){
+    .settings_page {
+        width: 240px;
+    }
+}
