--- a/src/css/TodoList.css
+++ b/src/css/TodoList.css
@@ -55,3 +55,15 @@ input:focus {
     outline-color: #b36dd0;
     color: rgba(52, 15, 61, 0.88);
 }
+
+.todo_elements {
+    margin: 20px 0;
+    max-height: 200px;
+    overflow: auto;
+}
+
+@media only screen and (max-width: 600px) {
+  .todo_elements {
+      max-height: 100px;
+  }
+}
